--- a/package.json
+++ b/package.json
@@ -8,12 +8,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.5",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sharp": "^0.29.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0-0",
+    "autoprefixer": "^10.4.2",
     "eslint": "8.6.0",
-    "eslint-config-next": "12.0.7"
+    "eslint-config-next": "12.0.7",
+    "postcss": "^8.4.5",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "tailwindcss": "^3.0.11",
+    "typescript": "^4.5.4"
   }
 }
